--- a/page-margarita.html
+++ b/page-margarita.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Margarita 3D • model-viewer</title>
+  <title>🍕 Margarita Basiliko</title>
 
   <!-- Importa el web component <model-viewer> desde CDN -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
@@ -32,6 +32,7 @@
     src="assets/margarita.glb"
     alt="Pizza Margarita 3D"
     camera-controls
+    disable-pan
     auto-rotate
     shadow-intensity="1"
     ar
