--- a/page-peperoni.html
+++ b/page-peperoni.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Margarita 3D • model-viewer</title>
+  <title>🍕 Peperoni Basiliko</title>
 
   <!-- Importa el web component <model-viewer> desde CDN -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
@@ -33,6 +33,7 @@
     alt="Pizza peperoni 3D"
     camera-controls
     auto-rotate
+    disable-pan
     shadow-intensity="1"
     ar
     ar-modes="webxr scene-viewer quick-look"
