Cambios en el zoom

--- a/page-margarita.html
+++ b/page-margarita.html
@@ -39,6 +39,8 @@
     ar-modes="webxr scene-viewer quick-look"
     ar-scale="fixed"
     ar-placement="floor"
+    min-camera-orbit="auto auto 1m"
+    max-camera-orbit="auto auto 5m"
     xr-environment>
     <!-- Botón AR personalizado (solo aparece en dispositivos con AR) -->
     <button slot="ar-button" id="ar-button">👀 la 🍕 en Realidad Aumentada </button>
