cambios en zoom

--- a/page-peperoni.html
+++ b/page-peperoni.html
@@ -37,11 +37,12 @@
     shadow-intensity="1"
     ar
     ar-modes="webxr scene-viewer quick-look"
+    scale="0.33 0.33 0.33"
     ar-scale="fixed"
     ar-placement="floor"
-    camera-orbit="0deg 75deg 3m"
-    min-camera-orbit="auto 45deg auto"
-    max-camera-orbit="auto 90deg auto"
+    camera-orbit="0deg 75deg 1m"
+    min-camera-orbit="auto auto 0.5m"
+    max-camera-orbit="auto auto 1m"
     xr-environment>
     <!-- Botón AR personalizado (solo aparece en dispositivos con AR) -->
     <button slot="ar-button" id="ar-button">👀 la 🍕 en Realidad Aumentada </button>
