--- a/page-peperoni.html
+++ b/page-peperoni.html
@@ -39,7 +39,9 @@
     ar-modes="webxr scene-viewer quick-look"
     ar-scale="fixed"
     ar-placement="floor"
-    camera-orbit="0deg 75deg 1m"
+    camera-orbit="0deg 75deg 3m"
+    min-camera-orbit="auto 45deg auto"
+    max-camera-orbit="auto 90deg auto"
     xr-environment>
     <!-- Botón AR personalizado (solo aparece en dispositivos con AR) -->
     <button slot="ar-button" id="ar-button">👀 la 🍕 en Realidad Aumentada </button>
