--- a/page-margarita.html
+++ b/page-margarita.html
@@ -12,18 +12,38 @@
   <style>
     html, body { height: 100%; margin: 0; font-family: system-ui, sans-serif; }
     model-viewer { width: 100%; height: 100%; background: #f6f7fb; }
+
     #ar-button {
       position: absolute; right: 16px; bottom: 16px;
       padding: 10px 14px; border: 0; border-radius: 999px; cursor: pointer;
       box-shadow: 0 6px 24px rgba(0,0,0,.2); background: white; font-weight: 600;
     }
+
     /* Mensaje solo visible durante sesión AR con WebXR */
     #ar-prompt { 
       position: absolute; left: 50%; transform: translateX(-50%); bottom: 16px;
       padding: 8px 12px; border-radius: 999px; background: white; 
       box-shadow: 0 6px 24px rgba(0,0,0,.15); font-size: 14px; display: none;
     }
-    model-viewer[ar-status="session-started"] ~ #ar-prompt { display: block; }
+    model-viewer[ar-status="session-started"] ~ #ar-prompt,
+    model-viewer[ar-status="object-placed"] ~ #ar-prompt { display: block; }
+
+    /* ──────────────────────────────────────────────────────────────
+       HUD con logo (solo durante AR WebXR)
+       ────────────────────────────────────────────────────────────── */
+    #ar-hud {
+      position: fixed; top: 12px; right: 12px; z-index: 1000;
+      display: none;            /* oculto por defecto */
+      pointer-events: none;     /* no bloquea gestos AR */
+      user-select: none;
+    }
+    #ar-hud img {
+      height: 44px;             /* ajusta tamaño del logo */
+      filter: drop-shadow(0 2px 6px rgba(0,0,0,.25));
+    }
+    /* Mostrar HUD solo cuando WebXR está presentando */
+    model-viewer[ar-status="session-started"] ~ #ar-hud,
+    model-viewer[ar-status="object-placed"] ~ #ar-hud { display: block; }
   </style>
 </head>
 <body>
@@ -47,7 +67,27 @@
     <button slot="ar-button" id="ar-button">👀 la 🍕 en Realidad Aumentada </button>
   </model-viewer>
 
+  <!-- Mensaje contextual durante AR WebXR -->
   <div id="ar-prompt">Mueve el teléfono para ayudar a detectar el piso…</div>
+
+  <!-- HUD: logo Basiliko (assets/logo-basiliko.png) -->
+  <div id="ar-hud">
+    <img src="assets/logo-basiliko.jpeg" alt="Basiliko" />
+  </div>
+
+  <!-- Opcional: JS para robustecer el alternado del HUD -->
+  <script>
+    const mv = document.getElementById('mv');
+    const hud = document.getElementById('ar-hud');
+    const prompt = document.getElementById('ar-prompt');
+
+    mv.addEventListener('ar-status', (ev) => {
+      const s = ev.detail.status; // 'not-presenting' | 'session-started' | 'object-placed' | 'failed'
+      const on = (s === 'session-started' || s === 'object-placed');
+      hud.style.display = on ? 'block' : 'none';
+      prompt.style.display = on ? 'block' : 'none';
+    });
+  </script>
 
 </body>
 </html>
