--- a/page-margarita.html
+++ b/page-margarita.html
@@ -9,17 +9,36 @@
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 
+  <!-- (Opcional) Pre-carga del logo para evitar parpadeo -->
+  <link rel="preload" href="assets/logo-basiliko.png" as="image">
+
   <style>
     html, body { height: 100%; margin: 0; font-family: system-ui, sans-serif; }
-    model-viewer { width: 100%; height: 100%; background: #f6f7fb; }
 
+    /* Contenedor de la escena: crea un contexto para ubicar el logo encima */
+    .stage {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: #f6f7fb; /* color de fondo general */
+    }
+
+    model-viewer {
+      width: 100%;
+      height: 100%;
+      background: #f6f7fb; /* mantiene el fondo del visor */
+      display: block;
+    }
+
+    /* Botón AR (slot) */
     #ar-button {
       position: absolute; right: 16px; bottom: 16px;
       padding: 10px 14px; border: 0; border-radius: 999px; cursor: pointer;
       box-shadow: 0 6px 24px rgba(0,0,0,.2); background: white; font-weight: 600;
     }
 
-    /* Mensaje solo visible durante sesión AR con WebXR */
+    /* Mensaje contextual */
     #ar-prompt { 
       position: absolute; left: 50%; transform: translateX(-50%); bottom: 16px;
       padding: 8px 12px; border-radius: 999px; background: white; 
@@ -29,65 +48,54 @@
     model-viewer[ar-status="object-placed"] ~ #ar-prompt { display: block; }
 
     /* ──────────────────────────────────────────────────────────────
-       HUD con logo (solo durante AR WebXR)
+       Overlay del logo SIEMPRE visible en navegador
+       (no bloquea gestos de rotación/zoom)
        ────────────────────────────────────────────────────────────── */
-    #ar-hud {
-      position: fixed; top: 12px; right: 12px; z-index: 1000;
-      display: none;            /* oculto por defecto */
-      pointer-events: none;     /* no bloquea gestos AR */
+    .brand-badge {
+      position: absolute;
+      top: 12px; right: 12px;
+      z-index: 10;
+      pointer-events: none;   /* no intercepta gestos del viewer */
       user-select: none;
     }
-    #ar-hud img {
-      height: 44px;             /* ajusta tamaño del logo */
+    .brand-badge img {
+      height: clamp(28px, 6vw, 44px);
       filter: drop-shadow(0 2px 6px rgba(0,0,0,.25));
+      display: block;
     }
-    /* Mostrar HUD solo cuando WebXR está presentando */
-    model-viewer[ar-status="session-started"] ~ #ar-hud,
-    model-viewer[ar-status="object-placed"] ~ #ar-hud { display: block; }
   </style>
 </head>
 <body>
 
-  <model-viewer id="mv"
-    src="assets/margarita.glb"
-    alt="Pizza Margarita 3D"
-    camera-controls
-    disable-pan
-    auto-rotate
-    shadow-intensity="1"
-    ar
-    ar-modes="webxr scene-viewer quick-look"
-    ar-scale="fixed"
-    ar-placement="floor"
-    camera-orbit="0deg 75deg 3m"
-    min-camera-orbit="auto 45deg auto"
-    max-camera-orbit="auto 90deg auto"
-    xr-environment>
-    <!-- Botón AR personalizado (solo aparece en dispositivos con AR) -->
-    <button slot="ar-button" id="ar-button">Activa 👀 la 🍕 en Realidad Aumentada </button>
-  </model-viewer>
+  <!-- Wrapper para superponer el logo sobre el model-viewer -->
+  <div class="stage">
+    <model-viewer id="mv"
+      src="assets/margarita.glb"
+      alt="Pizza Margarita 3D"
+      camera-controls
+      disable-pan
+      auto-rotate
+      shadow-intensity="1"
+      ar
+      ar-modes="webxr scene-viewer quick-look"
+      ar-scale="fixed"
+      ar-placement="floor"
+      camera-orbit="0deg 75deg 3m"
+      min-camera-orbit="auto 45deg auto"
+      max-camera-orbit="auto 90deg auto"
+      xr-environment>
+      <!-- Botón AR personalizado (solo aparece en dispositivos con AR) -->
+      <button slot="ar-button" id="ar-button">👀 la 🍕 en Realidad Aumentada.</button>
+    </model-viewer>
 
-  <!-- Mensaje contextual durante AR WebXR -->
-  <div id="ar-prompt">Mueve el teléfono para ayudar a detectar el piso…</div>
+    <!-- Overlay del logo (siempre visible en navegador) -->
+    <div class="brand-badge">
+      <img src="assets/logo-basiliko.png" alt="Basiliko" />
+    </div>
 
-  <!-- HUD: logo Basiliko (assets/logo-basiliko.png) -->
-  <div id="ar-hud">
-    <img src="assets/logo-basiliko.jpeg" alt="Basiliko" />
+    <!-- Mensaje contextual durante AR WebXR -->
+    <div id="ar-prompt">Mueve el teléfono para ayudar a detectar el piso…</div>
   </div>
-
-  <!-- Opcional: JS para robustecer el alternado del HUD -->
-  <script>
-    const mv = document.getElementById('mv');
-    const hud = document.getElementById('ar-hud');
-    const prompt = document.getElementById('ar-prompt');
-
-    mv.addEventListener('ar-status', (ev) => {
-      const s = ev.detail.status; // 'not-presenting' | 'session-started' | 'object-placed' | 'failed'
-      const on = (s === 'session-started' || s === 'object-placed');
-      hud.style.display = on ? 'block' : 'none';
-      prompt.style.display = on ? 'block' : 'none';
-    });
-  </script>
 
 </body>
 </html>
