--- a/page-margarita.html
+++ b/page-margarita.html
@@ -58,11 +58,14 @@
       pointer-events: none;   /* no intercepta gestos del viewer */
       user-select: none;
     }
+    
     .brand-badge img {
-      height: clamp(28px, 6vw, 44px);
+      height: clamp(36px, 7.8vw, 57px); /* +30% respecto a 28px, 6vw, 44px */
+      border-radius: 8px;               /* bordes suavemente redondeados */
       filter: drop-shadow(0 2px 6px rgba(0,0,0,.25));
       display: block;
     }
+
   </style>
 </head>
 <body>
