--- a/page-margarita.html
+++ b/page-margarita.html
@@ -60,11 +60,11 @@
     }
     
     .brand-badge img {
-      height: clamp(36px, 7.8vw, 57px); /* +30% respecto a 28px, 6vw, 44px */
-      border-radius: 8px;               /* bordes suavemente redondeados */
-      filter: drop-shadow(0 2px 6px rgba(0,0,0,.25));
-      display: block;
-    }
+    height: clamp(72px, 15.6vw, 114px); /* x2 respecto a 36px, 7.8vw, 57px */
+    border-radius: 8px;
+    filter: drop-shadow(0 2px 6px rgba(0,0,0,.25));
+    display: block;
+  }
 
   </style>
 </head>
