--- a/page-peperoni.html
+++ b/page-peperoni.html
@@ -87,14 +87,15 @@
       shadow-intensity="1"
       ar
       ar-modes="webxr scene-viewer quick-look"
-      ar-scale="fixed"
+      ar-scale="auto"
       ar-placement="floor"
+      touch-action="pan-y"
       camera-orbit="0deg 75deg 3m"
       min-camera-orbit="auto 45deg auto"
       max-camera-orbit="auto 90deg auto"
       xr-environment>
       <!-- Botón AR personalizado (solo aparece en dispositivos con AR) -->
-      <button slot="ar-button" id="ar-button">👀 la 🍕 en Realidad Aumentada.</button>
+      <button slot="ar-button" id="ar-button">👀 la 🍕 en Realidad Aumentada</button>
     </model-viewer>
 
     <!-- Overlay del logo (siempre visible en navegador) -->
