--- a/page-margarita.html
+++ b/page-margarita.html
@@ -87,7 +87,7 @@
       shadow-intensity="1"
       ar
       ar-modes="webxr scene-viewer quick-look"
-      ar-scale="auto"
+      scale="0.7 0.7 0.7"
       ar-placement="floor"
       touch-action="pan-y"
       camera-orbit="0deg 75deg 3m"
@@ -95,7 +95,7 @@
       max-camera-orbit="auto 90deg auto"
       xr-environment>
       <!-- Botón AR personalizado (solo aparece en dispositivos con AR) -->
-      <button slot="ar-button" id="ar-button">👀 la 🍕 en Realidad Aumentada</button>
+      <button slot="ar-button" id="ar-button">👀 la 🍕 en Realidad Aumentada..</button>
     </model-viewer>
 
     <!-- Overlay del logo (siempre visible en navegador) -->
