--- a/page-margarita.html
+++ b/page-margarita.html
@@ -94,7 +94,7 @@
       max-camera-orbit="auto 90deg auto"
       xr-environment>
       <!-- Botón AR personalizado (solo aparece en dispositivos con AR) -->
-      <button slot="ar-button" id="ar-button">👀 la 🍕 en Realidad Aumentada..</button>
+      <button slot="ar-button" id="ar-button">👀 la 🍕 en Realidad Aumentada</button>
     </model-viewer>
 
     <!-- Overlay del logo (siempre visible en navegador) -->
